# tiktok-collector

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
src/tiktok_collector/: cli.py  collector.py  config.py  models.py  storage.py
